# Vang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini
Applications/: CMakeLists.txt
Applications/SampleVangApp/: CMakeFiles.cmake  CMakeLists.txt
Applications/SampleVangApp/src/: PlayerMovement.h  SampleVangApp.cpp  UISetup.h
Applications/TerrainGenerationTestApp/: CMakeFiles.cmake  CMakeLists.txt
Applications/TerrainGenerationTestApp/src/: TerrainGenerationTestApp.cpp
Applications/VangBenchmarks/: CMakeFiles.cmake  CMakeLists.txt
Applications/VangBenchmarks/src/: VangBenchmarks.cpp
CMakeScripts/: bakeShaders.py
ShaderArt/: first.glsl
Vang/: CMakeFiles.cmake  CMakeLists.txt
Vang/shaders/: 2dSceneTest.glsl  exampleRayMarcher.glsl  main.frag.glsl  main.vert.glsl  voxelRayMarcher.glsl
Vang/shaders/Textures/Dirt/: dirt.glsl
Vang/shaders/Textures/Grass/: grass.glsl
Vang/src/: Vang.cpp  Vang.h  VangPCH.h
Vang/src/Vang/Application/: Application.cpp  Application.h
Vang/src/Vang/GraphicsAPI/: GraphicsAPI.cpp  GraphicsAPI.h
Vang/src/Vang/GraphicsAPI/Generic/: Components.cpp  Components.h  GraphicsAPI.cpp  GraphicsAPI.h
Vang/src/Vang/GraphicsAPI/Generic/Buffers/UI/: ColoredPanelBuffer.h
Vang/src/Vang/GraphicsAPI/Generic/Shader/: Shader.cpp  Shader.h
Vang/src/Vang/GraphicsAPI/Generic/Shaders/: Shader.h  ShaderProgram.cpp  ShaderProgram.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/: GraphicsOpenGL.cpp  GraphicsOpenGL.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/Buffers/: BlockBuffer.cpp  BlockBuffer.h  EntityBuffer.cpp  EntityBuffer.h  LightBuffer.cpp  LightBuffer.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/Buffers/UI/: ColoredPanelBuffer.cpp  ColoredPanelBuffer.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/Shaders/: GL_Shader.cpp  GL_Shader.h  GL_ShaderProgram.cpp  GL_ShaderProgram.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramManager.cpp  ShaderProgramManager.h  ShaderTexture.cpp  ShaderTexture.h  VertexData.cpp  VertexData.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/UI/: UIBuffers.cpp  UIBuffers.h
Vang/src/Vang/GraphicsAPI/GraphicsOpenGL/UI/Buffers/: ColoredPanelBuffer.cpp  ColoredPanelBuffer.h
Vang/src/Vang/GraphicsAPI/GraphicsVulkan/: GraphicsVulkan.cpp  GraphicsVulkan.h
Vang/src/Vang/GraphicsAPI/GraphicsVulkan/VulkanHelpers/: VulkanInstance.cpp  VulkanInstance.h  VulkanSurface.cpp  VulkanSurface.h
Vang/src/Vang/Items/: Item.cpp  Item.h  ItemBlueprint.cpp  ItemBlueprint.h
Vang/src/Vang/Items/Usability/: Placeable.cpp  Placeable.h  Unusable.cpp  Unusable.h  Usability.cpp  Usability.h
Vang/src/Vang/Modding/: Mod.cpp  Mod.h  ModManager.cpp  ModManager.h
Vang/src/Vang/UI/: ImGuiMenu.cpp  ImGuiMenu.h  Menu.cpp  Menu.h  UIManager.cpp  UIManager.h
Vang/src/Vang/Utility/Behaviors/: Behaviors.cpp  Behaviors.h
Vang/src/Vang/Utility/BlueprintContainer/: BlueprintContainer.cpp  BlueprintContainer.h
Vang/src/Vang/Utility/Camera/: Camera.cpp  Camera.h
Vang/src/Vang/Utility/Entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Vang/src/Vang/Utility/Events/: ApplicationEvent.h  Event.h  EventHandler.cpp  EventHandler.h  KeyEvent.h  MouseEvent.h
Vang/src/Vang/Utility/FileIO/: FileIO.cpp  FileIO.h
Vang/src/Vang/Utility/Input/: Input.cpp  Input.h
Vang/src/Vang/Utility/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Vang/src/Vang/Utility/Lights/: Light.cpp  Light.h  LightManager.cpp  LightManager.h
Vang/src/Vang/Utility/Logging/: Log.cpp  Log.h
Vang/src/Vang/Utility/Player/: Player.cpp  Player.h
Vang/src/Vang/Utility/Structures/: Structure.cpp  Structure.h
Vang/src/Vang/Utility/Textures/: TextureBlueprint.h
Vang/src/Vang/Utility/Time/: Time.cpp  Time.h
Vang/src/Vang/Utility/VMath/: VMath.cpp  VMath.h
Vang/src/Vang/Voxel/: Block.cpp  Block.h  BlockBlueprint.cpp  BlockBlueprint.h  Chunk.cpp  Chunk.h  ChunkLoader.cpp  ChunkLoader.h  ChunkRenderer.cpp  ChunkRenderer.h  CubeChunkLoader.cpp  CubeChunkLoader.h  CubeChunkRenderer.cpp  CubeChunkRenderer.h  Universe.cpp  Universe.h  UniverseManager.cpp  UniverseManager.h  World.cpp  World.h
Vang/src/Vang/Voxel/Rendering/: ChunkRenderer.cpp  ChunkRenderer.h
Vang/src/Vang/Window/: Window.cpp  Window.h
Vang/src/Vang/Window/WindowGLFW/: GLFWInputCache.cpp  GLFWInputCache.h  InputGLFW.cpp  InputGLFW.h  WindowGLFW.cpp  WindowGLFW.h
Vang/tests/: CMakeLists.txt
Vang/tests/src/: BlueprintContainer.cpp  BlueprintContainerUnitTests.cpp  ChunkUnitTests.cpp
Vang/xml/: BasicEntity.xml  test.xml
VangApp/: CMakeFiles.cmake  CMakeLists.txt
VangApp/src/: ExampleOpenGL.cpp  ExampleVulkan.cpp  SampleRayMarcher.cpp  VangApp.cpp
shaders/: exampleRayMarcher.glsl  main.vert.glsl  testRayMarcher.glsl  voxelRayMarcher.glsl
